--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-02T22:51:35.781Z
-Commit: Resolve null pointer exception in user service
+Timestamp: 2025-11-02T22:53:14.339Z
+Commit: Patch API endpoint error handling
